--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,16 @@
             <artifactId>thymeleaf-spring6</artifactId> <!-- 1 -->
             <version>3.1.3.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.3.232</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>6.2.7</version>
+        </dependency>
     </dependencies>
 
     <build>
