--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,19 @@
             <groupId>com.h2database</groupId> <!---->
             <artifactId>h2</artifactId>
         </dependency>
-	</dependencies>
+
+        <dependency>
+            <groupId>com.emanuelkukec</groupId>
+            <artifactId>emanuelkukec-spring-boot-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.vibur</groupId>
+            <artifactId>vibur-dbcp</artifactId>
+            <version>25.0</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
