--- a/pom.xml
+++ b/pom.xml
@@ -48,26 +48,15 @@
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-xml</artifactId>
         </dependency>
+
         <dependency>
-            <groupId>org.springframework.boot</groupId> <!---->
-            <artifactId>spring-boot-starter-jdbc</artifactId>
+            <groupId>org.springframework.boot</groupId> <!--`-->
+            <artifactId>spring-boot-starter-data-jdbc</artifactId>
         </dependency>
 
         <dependency>
             <groupId>com.h2database</groupId> <!---->
             <artifactId>h2</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.emanuelkukec</groupId>
-            <artifactId>emanuelkukec-spring-boot-starter</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.vibur</groupId>
-            <artifactId>vibur-dbcp</artifactId>
-            <version>25.0</version>
         </dependency>
     </dependencies>
 
